# PhysicsEngine

./: .gitignore  CMakeLists.txt  README.md  boundingbox.h  main.cpp  vectors.h
include/: model.h
include/core/: camera.h  game_object.h  main_engine.h  scene.h
include/core/components/: component.h  light.h  material.h  model.h  softbody.h  transform.h
include/gui/: AddObjectWindow.h  Details.h  FileHierarchy.h  MenuBar.h  PreferencesWindow.h  SecondaryMenuBar.h  Terminal.h  Viewport.h  gui_engine.h
include/render/: render_engine.h  shader.h
resources/shaders/: frag.glsl  phong_frag.glsl  phong_vert.glsl  vert.glsl
src/: main.cpp
src/core/: main_engine.cpp
src/gui/: Add_Object_Window.cpp  Details.cpp  FileHierarchy.cpp  MenuBar.cpp  PreferencesWindow.cpp  SecondaryMenuBar.cpp  Terminal.cpp  Viewport.cpp  gui_engine.cpp
src/render/: render_engine.cpp  shader.cpp
